Added some new buttons and a new color

--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 
  
 
-			 <div class="container">
-			 </div>
+			
+				<div class="container">
+				</div>
 
-			 <div class="cont">
-			    <button class="but one">Clear Pad</button>
-			    <button class="but two" id="resize">Resize</button>
-			 </div> 
+				 <div class="cont">
+				<button class="but one">Clear Pad</button>
+				  <button class="but two" id="resize">Resize</button>
+				   <button class="but blue">Blue</button>
+				<button class="but red">reddish</button>
+				</div> 
+
 
 
 		
